feat: add user IP management
